--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="track" id="track">
                     <article class="card">
                         <div class="media"
-                            style="background-image: url('https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')">
+                            style="background-image: url('clothing.png')">
                         </div>
                         <div class="card-1">
                             <div class="card-header">
