--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="track" id="track">
                     <article class="card">
                         <div class="media"
-                            style="background-image: url('clothing.png')">
+                            style="background-image: url('clothing.jpg')">
                         </div>
                         <div class="card-1">
                             <div class="card-header">
