Comment out content div in about.html
Comment out the content div in about.html

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="content">
+    <!-- <div class="content"> -->
         <main class="card" role="main">
             <aside class="left">
                 <img class="bgImg" src="FB_IMG_1736865397999.jpg" alt="">
@@ -67,7 +67,7 @@
                 </button>
             </section>
         </main>
-    </div>
+    <!-- </div> -->
     <script src="footer.js"></script>
 </body>
 
