Replace image sources in about.html

--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
     <!-- <div class="content"> -->
         <main class="card" role="main">
             <aside class="left">
-                <img class="bgImg" src="FB_IMG_1736865397999.jpg" alt="">
+                <img class="bgImg" src="profilePicture.jpg" alt="">
                 <div class="photo-wrap">
-                    <img src="FB_IMG_1736865397999.jpg" alt="profile">
+                    <img src="profilePicture.jpg" alt="profile">
                 </div>
                 <div class="leftContent">
                     <div>
