--- a/skills.html
+++ b/skills.html
@@ -6,7 +6,7 @@
   <title>My Skills</title>
   <link rel="stylesheet" href="styles/skills.css">
   <link rel="stylesheet" href="styles/general.css">
-  <link rel="icon" type="image/x-icon" href="logo.png">
+  <link rel="icon" type="image/x-icon" href="assets/logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -17,10 +17,10 @@
       <div class="skill-item">
         <div class="skill-header">
           <h3>HTML</h3>
-          <span class="skill-percentage">90%</span>
+          <span class="skill-percentage">95%</span>
         </div>
         <div class="loaderTrack">
-          <div class="loader" data-percent="90"></div>
+          <div class="loader" data-percent="95"></div>
         </div>
       </div>
 
@@ -105,10 +105,20 @@
           <div class="loader" data-percent="70"></div>
         </div>
       </div>
+
+      <div class="skill-item">
+        <div class="skill-header">
+          <h3>Database Management</h3>
+          <span class="skill-percentage">70%</span>
+        </div>
+        <div class="loaderTrack">
+          <div class="loader" data-percent="70"></div>
+        </div>
+      </div>
     </div>
   </div>
 
-  <script src="footer.js"></script>
+  <script src="javascript/footer.js"></script>
   <script>
     // Animate progress bars on page load
     document.addEventListener('DOMContentLoaded', function () {
