--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <script src="javascript/header.js"></script>
     <main class="card" role="main">
         <aside class="left">
             <img class="bgImg" src="assets/profilePicture.jpg" alt="">
@@ -71,6 +72,7 @@
         </section>
     </main>
     <script src="javascript/footer.js"></script>
+    <script src="javascript/theme.js"></script>
 </body>
 
 </html>
