--- a/skills.html
+++ b/skills.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <script src="javascript/header.js"></script>
   <h1>My Skills</h1>
   <div class="cards-wrapper">
     <div class="card">
@@ -119,6 +120,7 @@
   </div>
 
   <script src="javascript/footer.js"></script>
+  <script src="javascript/theme.js"></script>
 <script>
   // Animate progress bars and percentage counters on page load
   document.addEventListener('DOMContentLoaded', function () {
