--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
 </head>
 
 <body>
+    <script src="javascript/header.js"></script>
     <div class="content">
         <h1>Get In Touch</h1>
 
@@ -157,6 +158,7 @@
     </div>
     
     <script src="javascript/footer.js"></script>
+    <script src="javascript/theme.js"></script>
     <script>
         // Client-side validation and form handling
         document.getElementById('contactForm').addEventListener('submit', function(event) {
