--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img class="logo-icon" src="assets/logo.png" alt="logo">
-            <span class="logo-text">Montsi portfolio</span>
-        </div>
-    </header>
+    <script src="javascript/header.js"></script>
     <div class="tagline">
         <i class="fas fa-star"></i>
         <span id="typed" aria-live="polite"></span>
@@ -244,5 +239,6 @@
     </div>
     <script src="javascript/footer.js"></script>
     <script src="javascript/main.js"></script>
+    <script src="javascript/theme.js"></script>
 </body>
 </html>
